@@ -1,4 +1,3 @@
-
 package com.fishtripplanner.dto;
 
 import com.fishtripplanner.domain.reservation.ReservationPost;
@@ -9,6 +8,7 @@ import lombok.Getter;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 @Builder
@@ -16,7 +16,7 @@ public class ReservationPostResponse {
     private Long id;
     private String title;
     private String content;
-    private String region;
+    private String region;  // 여러 지역을 처리할 수 있도록 수정
     private String type;
     private List<LocalDate> availableDates;
     private int price;
@@ -25,10 +25,15 @@ public class ReservationPostResponse {
 
     // ✅ 정적 팩토리 메서드 사용
     public static ReservationPostResponse from(ReservationPost post) {
-        String child = post.getRegion().getName();
-        String parent = post.getRegion().getParent() != null ? post.getRegion().getParent().getName() : null;
-        String regionText = parent != null ? "(" + parent + ") " + child : child;
+        // 여러 지역을 처리하는 코드로 수정
+        String regionText = post.getRegions().stream()
+                .map(region -> {
+                    String parent = region.getParent() != null ? "(" + region.getParent().getName() + ") " : "";
+                    return parent + region.getName();  // 지역 이름에 부모 지역 이름을 추가
+                })
+                .collect(Collectors.joining(", "));  // 지역들을 콤마로 구분하여 연결
 
+        // 이미지 URL 설정
         String imageUrl = post.getImageUrl();
         if (imageUrl == null || imageUrl.isBlank()) {
             imageUrl = switch (post.getType()) {
@@ -41,11 +46,12 @@ public class ReservationPostResponse {
             };
         }
 
+        // 예약글 응답 객체 생성
         return ReservationPostResponse.builder()
                 .id(post.getId())
                 .title(post.getTitle())
                 .content(post.getContent())
-                .region(regionText)
+                .region(regionText)  // 여러 지역을 처리한 텍스트
                 .type(post.getType().name())
                 .price(post.getPrice())
                 .imageUrl(imageUrl)
@@ -53,7 +59,7 @@ public class ReservationPostResponse {
                 .availableDates(
                         post.getAvailableDates().stream()
                                 .map(ReservationPostAvailableDate::getAvailableDate)
-                                .toList()
+                                .collect(Collectors.toList())  // 날짜 리스트로 변환
                 )
                 .build();
     }
